2002-07-11  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 580090 ]: unbound SYSTEM::*COMPILING-FROM-FILE*
	error on (lambda () (defmethod ...))
	* init.lisp (%expand-form): when evaluating (EVAL-WHEN (COMPILE))
	bind COMPILER::*COMPILING-FROM-FILE* to nil

2002-07-10  Sam Steingold  <sds@gnu.org>

	* spvw.d (quit): call done_win32()

2002-07-09  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (compile-file): do not clobber *.c file when
	there are no FFI forms

2002-07-09  Sam Steingold  <sds@gnu.org>

	* bindings/linuxlibc6/linux.lisp (read): added commas before
	arguments in backquote

2002-07-09  Sam Steingold  <sds@gnu.org>

	* complete.lisp (completion): consider the situation FUNCTIONALP
	when start==end, this fixes the "(finalize TAB" bug)

2002-07-09  Sam Steingold  <sds@gnu.org>

	* pathname.d (PARSE-NAMESTRING): barf on symbols when
	CUSTOM:*PARSE-NAMESTRING-ANSI* is non-NIL
	(FILE-STAT-INTERNAL): use coerce_pathname()

2002-07-08  Sam Steingold  <sds@gnu.org>

	* clos.lisp (check-metaclass-mix): new function
	(initialize-instance-standard-class, make-instance-built-in-class):
	(initialize-instance-structure-class): use it

2002-07-02  Sam Steingold  <sds@gnu.org>

	* _clisp.c [STDC_HEADERS]: #include <stdlib.h> (HAVE_STDLIB_H is
	obsolete)

2002-07-01  Sam Steingold  <sds@gnu.org>

	* spvw.d (main): removed the obsolete -W option for the sake of
	the CYGWIN port getting "-M c:/gnu/clisp/lispinit.mem"
	* _clisp.c (main): ditto

2002-07-01  LaMont Jones  <lamont@smallone.fc.hp.com>

	* ffcall/callback/trampoline_r/trampoline.c (alloc_trampoline_r)
	(is_tramp): work around a bug in gcc 3.*
	* ffcall/avcall/avcall-hppa.s:
	* ffcall/callback/trampoline_r/cache-hppa.s:
	* ffcall/callback/trampoline_r/proto-hppa.s:
	* ffcall/callback/trampoline_r/tramp-hppa.s:
	* ffcall/callback/vacall_r/vacall-hppa.s:
	* ffcall/trampoline/cache-hppa.s:
	* ffcall/trampoline/proto-hppa.s:
	* ffcall/trampoline/tramp-hppa.s:
	* ffcall/vacall/vacall-hppa.s: