@@ -3760,10 +3760,11 @@ typedef xrecord_ *  Xrecord;
 
 # Possible rectype values for records.
   enum {
-           enum_rectype_first = -4,     # Try to keep rectype_limit = 0.
+           enum_rectype_first = -5,     # Try to keep rectype_limit = 0.
          Rectype_Closure,
          Rectype_Structure,             # only used #ifndef case_structure
          Rectype_Instance,
+         Rectype_realloc_Instance,
            rectype_limit, # Here is the limit between Srecord and Xrecord.
          Rectype_Hashtable = rectype_limit,
          #ifndef TYPECODES
@@ -11842,6 +11843,10 @@ extern void export (const object* sym_, const object* pack_);
 # < result: current Package
 extern object get_current_package (void);
 # is used by IO, EVAL
+
+/* check whether package lock prevents assignment to symbol */
+global void symbol_value_check_lock (object caller, object symbol);
+/* used by EVAL */
 
 # UP: Initializes the package-management
 # init_packages();
